--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.3",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.7.0",
     "nodemon": "^2.0.20"
   }
 }
